risolvo bug
bug creato dal cambio di auto nel codice di elvis